Fix spacing in css

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: 'Merriweather', serif;
+  font-family: Merriweather, serif;
 }
 
 *, *::before, *::after {
@@ -9,18 +9,21 @@ html {
 
 body {
   margin: 0;
+  display: flex;
 }
 
 header {
   background-color: #d05c2e;
   color: #fff;
   font-weight: bold;
+  justify-content: space-around;
 }
 
 h1 {
   text-align: center;
   font-size: 2rem;
   margin: 0;
+  text-decoration: none;
 }
 
 a {
@@ -29,15 +32,21 @@ a {
   text-align: center;
   display: inline-block;
   border-style: solid;
-  border-color:  #a63f38;
+  border-color: #a63f38;
   margin: 0;
   align-items: center;
+  text-decoration: none;
+}
+
+nav:hover {
+  color: #a63f38;
 }
 
 ul {
   text-align: center;
   border-style: solid;
-  border-color:  #a63f38;
+  border-color: #a63f38;
+  text-decoration-color: #fff;
 }
 
 img {
